Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/enum/ExplicitlyAbstractEnum1.out
ExplicitlyAbstractEnum1.java:9:10: compiler.err.mod.not.allowed.here: abstract
1 error
